--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18",
-    "vite": "^7.3.0"
+    "tailwindcss": "^4.1.18"
   },
   "name": "pr-tailwind-css-final-practicalexam-pooja",
   "version": "1.0.0",
@@ -11,6 +10,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "vite",
+    "build": "vite build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,5 +25,7 @@
     "url": "https://github.com/Pooja23494/PR-Tailwind-CSS-Final-PracticalExam-Pooja/issues"
   },
   "homepage": "https://github.com/Pooja23494/PR-Tailwind-CSS-Final-PracticalExam-Pooja#readme",
-  "devDependencies": {}
+  "devDependencies": {
+    "vite": "^7.3.0"
+  }
 }
