--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "npx vite build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "dev": "node node_modules/vite/bin/vite.js",
+  "build": "node node_modules/vite/bin/vite.js build",
+  "preview": "node node_modules/vite/bin/vite.js preview"
   },
   "repository": {
     "type": "git",
